[options]
zip_safe = true
include_package_data = false
python_requires = >= 3.10
py_modules = yolo
install_requires =
    imutils==0.5.4
    numpy==1.23.0
    opencv-python==3.4.18.65
    scipy==1.8.1
    typer==0.5.0

[options.entry_points]
console_scripts =
    yolo = yolo:cli

[tool.black]
line-length = 88
include = '\.pyi?$'
exclude = .git,.hg,.mypy_cache,.tox,.venv,_build,buck-out,build,dist

[flake8]
max-line-length = 88
exclude = .tox,.eggs,ci/templates,build,dist, __init__.py
ignore=E741,F403,E265,W504,E226,W503,E501,E203

[tool:isort]
profile=black
skip = .tox,.eggs,ci/templates,build,dist

[mypy]
disallow_untyped_defs = True
disallow_any_unimported = True
no_implicit_optional = True
check_untyped_defs = True
warn_return_any = True
warn_unused_ignores = True
show_error_codes = True
warn_unreachable = True
